# PYmul

./: LICENSE  README.md  cli.py  dispatcher.py  os_detect.py  pyproject.toml
PYmul/: cli.py
commands/: install.py
managers/: apt_manager.py  base.py  pip_manager
plugin/: arcs.md  base.py  plugin_loader.py
